echo-v3/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    example: httpbin-route
spec:
  parentRefs:
    - name: echo-v3
      namespace: echo
  hostnames:
    - "echo.int.io"
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
      - name: echo
        port: 3000
